[gd_scene load_steps=5 format=2]

[ext_resource path="res://InventoryPanel.gd" type="Script" id=1]
[ext_resource path="res://equipment_gui.gd" type="Script" id=2]
[ext_resource path="res://InventorySlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Inventory.gd" type="Script" id=4]

[node name="InventoryPanel" type="Control" groups=[
"inventory_gui",
]]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 400.0

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Eq" type="Label" parent="Control"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 21.0
text = "Equipment"

[node name="EquipmentContainer" type="HBoxContainer" parent="Control"]
margin_left = 7.0
margin_top = 25.0
margin_right = 393.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 2 )

[node name="InventorySlot" parent="Control/EquipmentContainer" instance=ExtResource( 3 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="InventorySlot2" parent="Control/EquipmentContainer" instance=ExtResource( 3 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0

[node name="InventorySlot3" parent="Control/EquipmentContainer" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0

[node name="Control2" type="Control" parent="."]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 21.0
margin_bottom = 20.0

[node name="HSeparator" type="HSeparator" parent="Control2/VBoxContainer"]
margin_right = 61.0
margin_bottom = 4.0

[node name="Title" type="Label" parent="Control2/VBoxContainer"]
margin_top = 8.0
margin_right = 61.0
margin_bottom = 22.0
text = "Inventory"

[node name="ItemName" type="Label" parent="Control2/VBoxContainer"]
margin_top = 26.0
margin_right = 61.0
margin_bottom = 40.0

[node name="Inventory" type="HBoxContainer" parent="Control2"]
editor/display_folded = true
margin_left = 7.0
margin_top = 87.0
margin_right = 393.0
margin_bottom = 127.0
script = ExtResource( 4 )

[node name="InventorySlot" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_right = 32.0
margin_bottom = 40.0

[node name="InventorySlot2" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0

[node name="InventorySlot3" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0

[node name="InventorySlot4" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 40.0

[node name="InventorySlot5" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 40.0

[node name="InventorySlot6" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 40.0

[node name="InventorySlot7" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 40.0

[node name="InventorySlot8" parent="Control2/Inventory" instance=ExtResource( 3 )]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 40.0

[node name="Inventory2" type="HBoxContainer" parent="Control2"]
editor/display_folded = true
margin_left = 7.0
margin_top = 37.0
margin_right = 393.0
margin_bottom = 77.0
script = ExtResource( 4 )

[node name="InventorySlot9" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_right = 32.0
margin_bottom = 40.0

[node name="InventorySlot10" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0

[node name="InventorySlot11" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0

[node name="InventorySlot12" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 40.0

[node name="InventorySlot13" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 40.0

[node name="InventorySlot14" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 40.0

[node name="InventorySlot15" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 40.0

[node name="InventorySlot16" parent="Control2/Inventory2" instance=ExtResource( 3 )]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 40.0

[node name="InventoryObjects" type="Node2D" parent="."]
visible = false
position = Vector2( 7, 7 )
